--- a/Lab03/Base.lproj/Main.storyboard
+++ b/Lab03/Base.lproj/Main.storyboard
@@ -104,6 +104,13 @@
                                                     <constraint firstAttribute="height" constant="53" id="cdM-yI-oFT"/>
                                                 </constraints>
                                             </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Question.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="ZI2-kq-RvP" userLabel="Img Question 10">
+                                                <rect key="frame" x="168" y="2621" width="59" height="53"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="53" id="Uei-k9-oZv"/>
+                                                    <constraint firstAttribute="width" constant="59" id="YG2-gM-qzV"/>
+                                                </constraints>
+                                            </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dwM-sF-pOg">
                                                 <rect key="frame" x="258" y="413" width="45" height="31"/>
                                                 <constraints>
@@ -394,13 +401,36 @@
                                                     <constraint firstAttribute="height" constant="150" id="Hn3-SM-W0E"/>
                                                 </constraints>
                                             </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Question.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="ZI2-kq-RvP" userLabel="Img Question 10">
-                                                <rect key="frame" x="168" y="2621" width="59" height="53"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="53" id="Uei-k9-oZv"/>
-                                                    <constraint firstAttribute="width" constant="59" id="YG2-gM-qzV"/>
-                                                </constraints>
-                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zrw-d0-HAi">
+                                                <rect key="frame" x="169" y="2708" width="54" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <state key="normal" title="Next">
+                                                    <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="7D6-Qy-jmq" kind="presentation" id="jkj-Rf-wdj"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7AR-Nw-aSO" userLabel="Next2">
+                                                <rect key="frame" x="250" y="2708" width="54" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <state key="normal" title="Next">
+                                                    <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="OzU-Rk-O1S" kind="presentation" id="U8G-qc-8fK"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1GN-z9-FjN" userLabel="Next3">
+                                                <rect key="frame" x="76" y="2708" width="54" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <state key="normal" title="Next">
+                                                    <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="Z6y-rM-q6i" kind="presentation" id="8pB-Xb-4FM"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <constraints>
                                             <constraint firstItem="0qL-yw-Nw4" firstAttribute="top" secondItem="o8h-gq-2ud" secondAttribute="bottom" constant="8" symbolic="YES" id="14e-4V-GzP"/>
@@ -621,12 +651,139 @@
             </objects>
             <point key="canvasLocation" x="287.5" y="289"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="9yt-7d-1dc">
+            <objects>
+                <viewController id="Z6y-rM-q6i" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Q2O-hp-Tj7"/>
+                        <viewControllerLayoutGuide type="bottom" id="trs-XL-3Vh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cRx-gJ-lGt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Loser.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="afX-6s-qPz">
+                                <rect key="frame" x="16" y="28" width="343" height="236"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU ARE A LOSER!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2z5-fg-ExJ">
+                                <rect key="frame" x="96" y="329" width="182" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="xgN-CH-CTq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="afX-6s-qPz" firstAttribute="trailing" secondItem="cRx-gJ-lGt" secondAttribute="trailingMargin" id="00X-Lz-KnM"/>
+                            <constraint firstItem="afX-6s-qPz" firstAttribute="leading" secondItem="cRx-gJ-lGt" secondAttribute="leadingMargin" id="0ev-p7-oxu"/>
+                            <constraint firstItem="afX-6s-qPz" firstAttribute="top" secondItem="Q2O-hp-Tj7" secondAttribute="bottom" constant="8" symbolic="YES" id="1JZ-6f-30b"/>
+                            <constraint firstItem="trs-XL-3Vh" firstAttribute="top" secondItem="2z5-fg-ExJ" secondAttribute="bottom" constant="314" id="91X-Eu-Lhz"/>
+                            <constraint firstItem="2z5-fg-ExJ" firstAttribute="top" secondItem="afX-6s-qPz" secondAttribute="bottom" constant="65" id="NVu-Iv-xkB"/>
+                            <constraint firstItem="2z5-fg-ExJ" firstAttribute="leading" secondItem="cRx-gJ-lGt" secondAttribute="leadingMargin" constant="80" id="hKI-Fh-AzU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2z5-fg-ExJ" secondAttribute="trailing" constant="81" id="oMR-pu-WQS"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="acO-ho-YyN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="734.5" y="715.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="9Y0-qW-gZl">
+            <objects>
+                <viewController id="7D6-Qy-jmq" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="663-FV-h3K"/>
+                        <viewControllerLayoutGuide type="bottom" id="ydx-wg-Px6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SI1-vc-2FR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="YOU ARE A GAME OF THRONES MASTER!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nX-XS-mmT">
+                                <rect key="frame" x="20" y="567" width="334" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="4Ph-X4-l1D"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="IronThrone.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="u7N-yR-4Oy">
+                                <rect key="frame" x="20" y="28" width="335" height="513"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6nX-XS-mmT" firstAttribute="leading" secondItem="SI1-vc-2FR" secondAttribute="leadingMargin" id="0Xu-KS-pEQ"/>
+                            <constraint firstItem="u7N-yR-4Oy" firstAttribute="centerX" secondItem="6nX-XS-mmT" secondAttribute="centerX" id="3N3-Tt-ExV"/>
+                            <constraint firstItem="u7N-yR-4Oy" firstAttribute="leading" secondItem="6nX-XS-mmT" secondAttribute="leading" id="5L1-VN-S1B"/>
+                            <constraint firstItem="u7N-yR-4Oy" firstAttribute="top" secondItem="663-FV-h3K" secondAttribute="bottom" constant="8" symbolic="YES" id="Lm0-ZT-dNW"/>
+                            <constraint firstItem="ydx-wg-Px6" firstAttribute="top" secondItem="6nX-XS-mmT" secondAttribute="bottom" constant="79" id="f4a-63-ldL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6nX-XS-mmT" secondAttribute="trailing" constant="1" id="twJ-Ab-UIG"/>
+                            <constraint firstItem="6nX-XS-mmT" firstAttribute="top" secondItem="u7N-yR-4Oy" secondAttribute="bottom" constant="26" id="yxU-Xg-W22"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jx4-oN-Jnn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="734.5" y="-752.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="m1d-DT-UDv">
+            <objects>
+                <viewController id="OzU-Rk-O1S" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="y6p-m3-zZN"/>
+                        <viewControllerLayoutGuide type="bottom" id="EK4-oC-cbn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5ca-UU-6Vq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="houses.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5rT-PS-w4F">
+                                <rect key="frame" x="63" y="28" width="248" height="551"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="551" id="Ys0-fM-Zt9"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU MUST SEE MORE GOT..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bl-m6-nHa">
+                                <rect key="frame" x="51" y="601" width="273" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5Bl-m6-nHa" firstAttribute="top" secondItem="5rT-PS-w4F" secondAttribute="bottom" constant="22" id="17p-TL-CMB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5Bl-m6-nHa" secondAttribute="trailing" constant="35" id="5G0-KE-3tg"/>
+                            <constraint firstItem="5Bl-m6-nHa" firstAttribute="leading" secondItem="5ca-UU-6Vq" secondAttribute="leadingMargin" constant="35" id="7rq-Xg-TfC"/>
+                            <constraint firstItem="5rT-PS-w4F" firstAttribute="leading" secondItem="5ca-UU-6Vq" secondAttribute="leadingMargin" constant="47" id="DLN-2W-feN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5rT-PS-w4F" secondAttribute="trailing" constant="48" id="DkD-G0-M8W"/>
+                            <constraint firstItem="5rT-PS-w4F" firstAttribute="top" secondItem="y6p-m3-zZN" secondAttribute="bottom" constant="8" symbolic="YES" id="bbP-0e-EKM"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kf3-2I-woH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="734.5" y="-23.5"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Brann.jpg" width="309" height="463"/>
         <image name="Hodor.jpg" width="225" height="300"/>
+        <image name="IronThrone.jpg" width="183" height="275"/>
         <image name="Jofrey.jpg" width="400" height="400"/>
         <image name="JohnSnow.jpg" width="4057" height="2700"/>
+        <image name="Loser.jpg" width="600" height="400"/>
         <image name="Margaery-Tyrell.jpg" width="368" height="534"/>
         <image name="Ned.jpg" width="1237" height="1085"/>
         <image name="Question.jpeg" width="626" height="626"/>
@@ -634,6 +791,7 @@
         <image name="Sansa.png" width="1024" height="576"/>
         <image name="Tyrion.png" width="659" height="462"/>
         <image name="gameof-thrones.jpg" width="725" height="290"/>
+        <image name="houses.jpg" width="1500" height="3750"/>
         <image name="khaleesi.jpg" width="515" height="444"/>
     </resources>
 </document>
